--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,15 @@ Thumbs.db
 search_response.json
 test_page.html
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+
+
+
