--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,32 @@
-requests>=2.31.0
-urllib3>=2.0.0
-pytest>=7.4.0
+# Telegram Bot
+aiogram==3.13.1
+aiohttp==3.10.11
+
+# Database
+asyncpg==0.29.0
+sqlalchemy[asyncio]==2.0.36
+
+# Redis
+redis[hiredis]==5.2.0
+
+# HTTP Client
+requests==2.32.3
+beautifulsoup4==4.12.3
+
+# Environment
+python-dotenv==1.0.1
+
+# Logging
+structlog==24.4.0
+
+# Testing
+pytest==8.3.3
+pytest-asyncio==0.24.0
+pytest-cov==6.0.0
+httpx==0.27.2
+
+# Code Quality
+ruff==0.6.4
+black==24.10.0
+
 
