Update bot service: improvements and new scripts

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 # Telegram Bot Configuration
 # олучить токен можно у @BotFather в Telegram
-BOT_TOKEN=your_telegram_bot_token_here
+BOT_TOKEN=8113054091:AAFXupeS0RWDCOmFz2_tjPEF8sw0A8Htdo0
 
 # GPT API Configuration
 # олучить API ключ можно на https://platform.openai.com/api-keys
 GPT_API_KEY=your_openai_api_key_here
 GPT_API_URL=https://api.openai.com/v1/chat/completions
-GPT_MODEL=gpt-4o-mini
+GPT_MODEL=gpt-4o
 
 # Redis Configuration
-# ля локальной разработки (внешний порт): redis://localhost:6380/0
-# ля Docker (внутри контейнера): redis://redis:6379/0
-REDIS_URL=redis://redis:6379/0
+# ля локальной разработки: redis://localhost:6379/0
+# ля Docker: redis://redis:6379/0
+REDIS_URL=redis://redis:6380/0
 
 # PostgreSQL Configuration (опционально)
 # ля локальной разработки: postgresql+asyncpg://app:app@localhost:5432/bd_demo
@@ -33,7 +33,7 @@ WHITE_LOGISTICS_DOCS_RUB=15000
 WHITE_LOGISTICS_BROKER_RUB=25000
 
 # Service Configuration
-# орт для health endpoint и webhook (внешний порт: 8443, внутри контейнера: 8090)
+# орт для health endpoint и webhook
 SERVICE_PORT=8443
 # ровень логирования: DEBUG, INFO, WARNING, ERROR
 LOG_LEVEL=INFO
