--- a/env.example
+++ b/env.example
@@ -17,7 +17,7 @@ REDIS_URL=redis://redis:6379/0
 # Для локальной разработки: postgresql+asyncpg://app:app@localhost:5433/app
 # Для Docker (если контейнер в той же сети): postgresql+asyncpg://app:app@docker-postgres-1:5432/app
 # Для Docker (если контейнер в другой сети): postgresql+asyncpg://app:app@host.docker.internal:5433/app
-DATABASE_URL=postgresql+asyncpg://app:app@docker-postgres-1:5432/app
+DATABASE_URL=postgresql+asyncpg://app:app@host.docker.internal:5433/app
 
 # Exchange Rates
 # Курсы валют (можно обновлять через API или вручную)
