refactor: использование существующего Redis контейнера вместо создания нового
- далён сервис redis из docker-compose.yml
- браны depends_on и volumes для Redis
- REDIS_URL настраивается через .env (docker-redis-1:6379)
- бновлён env.example с инструкциями по подключению к существующему Redis

--- a/env.example
+++ b/env.example
@@ -10,14 +10,18 @@ GPT_MODEL=gpt-4o
 
 # Redis Configuration
 # Для локальной разработки: redis://localhost:6379/0
-# Для Docker: redis://redis:6379/0 (внутри Docker сети используется внутренний порт 6379)
-REDIS_URL=redis://redis:6379/0
+# Для Docker (используется существующий Redis контейнер):
+#   - Узнай имя контейнера: docker ps | grep redis
+#   - Подключи контейнер к сети: docker network connect docker_wb_lead_network <redis_container_name>
+#   - Используй имя контейнера: redis://<redis_container_name>:6379/0
+#   - Или используй внешний порт: redis://172.17.0.1:6380/0 (если Redis слушает на 6380)
+REDIS_URL=redis://docker-redis-1:6379/0
 
 # PostgreSQL Configuration (опционально)
 # Для локальной разработки: postgresql+asyncpg://app:app@localhost:5433/app
-# Для Docker (если контейнер в той же сети): postgresql+asyncpg://app:app@docker-postgres-1:5432/app
-# Для Docker (если контейнер в другой сети): postgresql+asyncpg://app:app@host.docker.internal:5433/app
-DATABASE_URL=postgresql+asyncpg://app:app@host.docker.internal:5433/app
+# Для Docker (контейнер docker-postgres-1 должен быть в сети wb_lead_network): postgresql+asyncpg://app:app@docker-postgres-1:5432/app
+# Альтернатива (если контейнер в другой сети): postgresql+asyncpg://app:app@172.17.0.1:5433/app
+DATABASE_URL=postgresql+asyncpg://app:app@docker-postgres-1:5432/app
 
 # Exchange Rates
 # Курсы валют (можно обновлять через API или вручную)
