Add automatic network initialization for Redis and PostgreSQL in docker-compose

--- a/env.example
+++ b/env.example
@@ -10,11 +10,9 @@ GPT_MODEL=gpt-4o
 
 # Redis Configuration
 # Для локальной разработки: redis://localhost:6379/0
-# Для Docker (используется существующий Redis контейнер):
-#   - Узнай имя контейнера: docker ps | grep redis
-#   - Подключи контейнер к сети: docker network connect docker_wb_lead_network <redis_container_name>
-#   - Используй имя контейнера: redis://<redis_container_name>:6379/0
-#   - Или используй внешний порт: redis://172.17.0.1:6380/0 (если Redis слушает на 6380)
+# Для Docker (используется существующий Redis контейнер docker-redis-1):
+#   - Контейнер должен быть подключен к сети wb_lead_network
+#   - Используй имя контейнера: redis://docker-redis-1:6379/0
 REDIS_URL=redis://docker-redis-1:6379/0
 
 # PostgreSQL Configuration (опционально)
