--- a/env.example
+++ b/env.example
@@ -10,16 +10,17 @@ GPT_MODEL=gpt-4o
 
 # Redis Configuration
 # Для локальной разработки: redis://localhost:6379/0
-# Для Docker (используется существующий Redis контейнер docker-redis-1):
-#   - Контейнер должен быть подключен к сети wb_lead_network
-#   - Используй имя контейнера: redis://docker-redis-1:6379/0
-REDIS_URL=redis://docker-redis-1:6379/0
+# Для Docker (используется встроенный Redis контейнер):
+#   - Контейнер wb_lead_redis автоматически создаётся в docker-compose.yml
+#   - Используй имя сервиса: redis://redis:6379/0
+REDIS_URL=redis://redis:6379/0
 
-# PostgreSQL Configuration (опционально)
+# PostgreSQL Configuration
 # Для локальной разработки: postgresql+asyncpg://app:app@localhost:5433/app
-# Для Docker (контейнер docker-postgres-1 должен быть в сети wb_lead_network): postgresql+asyncpg://app:app@docker-postgres-1:5432/app
-# Альтернатива (если контейнер в другой сети): postgresql+asyncpg://app:app@172.17.0.1:5433/app
-DATABASE_URL=postgresql+asyncpg://app:app@docker-postgres-1:5432/app
+# Для Docker (используется встроенный PostgreSQL контейнер):
+#   - Контейнер wb_lead_postgres автоматически создаётся в docker-compose.yml
+#   - Используй имя сервиса: postgresql+asyncpg://app:app@postgres:5432/app
+DATABASE_URL=postgresql+asyncpg://app:app@postgres:5432/app
 
 # Exchange Rates
 # Курсы валют (можно обновлять через API или вручную)
