--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -1,4 +1,37 @@
 services:
+  redis:
+    image: redis:7-alpine
+    container_name: wb_lead_redis
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+    restart: unless-stopped
+    networks:
+      - wb_lead_network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
+
+  postgres:
+    image: postgres:16-alpine
+    container_name: wb_lead_postgres
+    environment:
+      POSTGRES_USER: app
+      POSTGRES_PASSWORD: app
+      POSTGRES_DB: app
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+    networks:
+      - wb_lead_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U app -d app"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   network_init:
     image: docker:latest
     container_name: wb_lead_network_init
@@ -8,9 +41,7 @@ services:
       if ! docker network inspect docker_wb_lead_network >/dev/null 2>&1; then
         docker network create docker_wb_lead_network;
       fi &&
-      docker network connect docker_wb_lead_network docker-redis-1 2>/dev/null || true &&
-      docker network connect docker_wb_lead_network docker-postgres-1 2>/dev/null || true &&
-      echo 'Network initialized: Redis and PostgreSQL connected'
+      echo 'Network initialized'
       "
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -33,8 +64,13 @@ services:
     networks:
       - wb_lead_network
     environment:
-      - DATABASE_URL=postgresql+asyncpg://app:app@docker-postgres-1:5432/app
+      - DATABASE_URL=postgresql+asyncpg://app:app@postgres:5432/app
+      - REDIS_URL=redis://redis:6379/0
     depends_on:
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
       network_init:
         condition: service_completed_successfully
 
@@ -52,10 +88,19 @@ services:
     networks:
       - wb_lead_network
     environment:
-      - DATABASE_URL=postgresql+asyncpg://app:app@docker-postgres-1:5432/app
+      - DATABASE_URL=postgresql+asyncpg://app:app@postgres:5432/app
+      - REDIS_URL=redis://redis:6379/0
     depends_on:
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
       network_init:
         condition: service_completed_successfully
+
+volumes:
+  redis_data:
+  postgres_data:
 
 networks:
   wb_lead_network:
