--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - ../../.env
     ports:
       - "8443:8444"
-    restart: unless-stopped
+    restart: always
     stop_grace_period: 10s
     stop_signal: SIGTERM
     command: ["python", "apps/bot_service/main.py"]
@@ -66,6 +66,12 @@ services:
     environment:
       - DATABASE_URL=postgresql+asyncpg://app:app@postgres:5432/app
       - REDIS_URL=redis://redis:6379/0
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8444/healthz"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     depends_on:
       redis:
         condition: service_healthy
@@ -82,7 +88,7 @@ services:
     # container_name: wb_lead_worker
     env_file:
       - ../../.env
-    restart: unless-stopped
+    restart: always
     stop_grace_period: 10s
     stop_signal: SIGTERM
     command: ["python", "apps/bot_service/workers/calculation_worker.py"]
@@ -91,8 +97,19 @@ services:
     environment:
       - DATABASE_URL=postgresql+asyncpg://app:app@postgres:5432/app
       - REDIS_URL=redis://redis:6379/0
+    healthcheck:
+      test: ["CMD-SHELL", "python -c \"import redis; r = redis.Redis.from_url('redis://redis:6379/0'); r.ping()\" || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
     deploy:
       replicas: 5
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+        window: 120s
       resources:
         limits:
           cpus: "1.0"
