--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - redis_data:/data
     command: redis-server --appendonly yes
-    restart: unless-stopped
+    restart: always
     networks:
       - wb_lead_network
     healthcheck:
@@ -23,7 +23,7 @@ services:
       POSTGRES_DB: app
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    restart: unless-stopped
+    restart: always
     networks:
       - wb_lead_network
     healthcheck:
@@ -67,7 +67,15 @@ services:
       - DATABASE_URL=postgresql+asyncpg://app:app@postgres:5432/app
       - REDIS_URL=redis://redis:6379/0
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8444/healthz"]
+      test:
+        [
+          "CMD",
+          "wget",
+          "--quiet",
+          "--tries=1",
+          "--spider",
+          "http://localhost:8444/healthz",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -98,18 +106,14 @@ services:
       - DATABASE_URL=postgresql+asyncpg://app:app@postgres:5432/app
       - REDIS_URL=redis://redis:6379/0
     healthcheck:
-      test: ["CMD-SHELL", "python -c \"import redis; r = redis.Redis.from_url('redis://redis:6379/0'); r.ping()\" || exit 1"]
+      test:
+        ["CMD-SHELL", "ps aux | grep '[p]ython.*calculation_worker' || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 20s
     deploy:
       replicas: 5
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 3
-        window: 120s
       resources:
         limits:
           cpus: "1.0"
