feat: switch to gpt-5-mini for code selection

--- a/env.example
+++ b/env.example
@@ -7,8 +7,8 @@ BOT_TOKEN=8113054091:AAFXupeS0RWDCOmFz2_tjPEF8sw0A8Htdo0
 GPT_API_KEY=your_openai_api_key_here
 GPT_API_URL=https://api.openai.com/v1/chat/completions
 GPT_MODEL=gpt-4o
-# Модель для подбора кода ТН ВЭД (по умолчанию gpt-4o, так как GPT-5 тратит все токены на reasoning)
-GPT_MODEL_FOR_CODE=gpt-4o
+# Модель для подбора кода ТН ВЭД (по умолчанию gpt-5-mini)
+GPT_MODEL_FOR_CODE=gpt-5-mini
 
 # Redis Configuration
 # Для локальной разработки: redis://localhost:6379/0
