feat: add web search support for TN VED code selection using gpt-4o-search-preview

--- a/env.example
+++ b/env.example
@@ -9,6 +9,8 @@ GPT_API_URL=https://api.openai.com/v1/chat/completions
 GPT_MODEL=gpt-4o
 # Модель для подбора кода ТН ВЭД (по умолчанию gpt-5-mini)
 GPT_MODEL_FOR_CODE=gpt-5-mini
+# Модель с поддержкой web search для подбора кода ТН ВЭД (используется для поиска на ifcg.ru и других сайтах)
+GPT_MODEL_FOR_CODE_WITH_SEARCH=gpt-4o-search-preview
 
 # Redis Configuration
 # Для локальной разработки: redis://localhost:6379/0
