feat: add notifications for express calculation results to Telegram group

--- a/env.example
+++ b/env.example
@@ -45,3 +45,14 @@ WHITE_LOGISTICS_BROKER_RUB=25000
 SERVICE_PORT=8444
 # Уровень логирования: DEBUG, INFO, WARNING, ERROR
 LOG_LEVEL=INFO
+
+# Daily Report Configuration
+# ID группы Telegram для отправки ежедневных отчетов (в 12:00 МСК)
+# Получить ID группы можно через @userinfobot или @getidsbot
+REPORT_CHAT_ID=
+
+# Notifications Configuration
+# ID группы Telegram для отправки уведомлений о запросах и результатах расчетов
+# Формат: @username | Статус: 🟢 | WB: артикул
+# Получить ID группы можно через @userinfobot или @getidsbot
+NOTIFICATION_CHAT_ID=
